--- a/src/Part6/AssemblyEndgame/index.css
+++ b/src/Part6/AssemblyEndgame/index.css
@@ -8,9 +8,21 @@ body {
     background-color: #262626;
     color: #D9D9D9;
     padding: 20px;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.main-container {
+  width: 480px;
+  max-width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 header {
     text-align: center;
@@ -28,25 +40,112 @@ header > p {
     color: #8E8E8E;
 }
 .game-status {
-  background-color: #10A95B;
   width: 352px;
   padding: 6px 0;
   border-radius: 4px;
   text-align: center;
   margin-block: 30px;
+  background-color: #10A95B;
+}
+.game-status.lost {
+  background-color:#BA2A2A;
+}
+.game-status.win {
+  background-color: #10A95B;
 }
 
 .game-status > h2 {
-  font-size: 1.25rem;
-  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #F9F4DA;
-  margin: 0;
-  line-height: 1.2;
+  border-radius: 4px;
+  margin-block: 30px;
 }
 
 .game-status > p {
-  font-size: 1rem;
-  color: #F9F4DA;
-  margin: 0;
-  line-height: 1.2;
+    margin: 5px;
+}
+.game-status > h2 {
+    font-size: 1.25rem;
+    margin: 5px
+}
+.language-chips {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  justify-content: center;
+  max-width: 350px;
+  margin-bottom: 36px;
+}
+.language-chip {
+  border-radius: 3px;
+  padding: 4.5px;
+  position: relative;
+}
+.language-chip.lost::before {
+    content: "💀";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 0.85rem;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+.word-display {
+  display: flex;
+  justify-content: center;
+  gap: 2px;
+  margin-bottom: 20px;
+}
+
+.letter {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #333;
+  color: #fff;
+  font-size: 1.5rem;
+  border-bottom: 2px solid #fff;
+}
+.keyboard {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
+  max-width: 450px;
+  margin-bottom: 36px;
+}
+.keyboard > button {
+  display: block;
+  height: 35px;
+  width: 35px;
+  background-color: #FCBA29;
+  border: 1px solid #D7D7D7;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.keyboard > button.correct {
+    background-color: #10A95B;
+}
+
+.keyboard > button.wrong {
+    background-color: #EC5D49;
+}
+button.new-game {
+    background-color: #11B5E5;
+    border: 1px solid #D7D7D7;
+    border-radius: 4px;
+    width: 225px;
+    height: 40px;
+    padding: 6px 12px;
+    display: block;
+    margin-inline: auto;
+    cursor: pointer;
 }
