--- a/src/Part6/AssemblyEndgame/index.css
+++ b/src/Part6/AssemblyEndgame/index.css
@@ -45,7 +45,12 @@ header > p {
   border-radius: 4px;
   text-align: center;
   margin-block: 30px;
-  background-color: #10A95B;
+  background-color: transparent;
+  min-height: 55px; /* Add this line */
+  align-items: center;
+}
+.game-status.farewell {
+  background-color: #7A5EA7;
 }
 .game-status.lost {
   background-color:#BA2A2A;
@@ -114,6 +119,11 @@ header > p {
   font-size: 1.5rem;
   border-bottom: 2px solid #fff;
 }
+.letter.missing {
+    color: #EC5D49;
+    opacity: 0.7;
+    font-weight: bold;
+}
 .keyboard {
   display: flex;
   flex-wrap: wrap;
@@ -137,6 +147,10 @@ header > p {
 
 .keyboard > button.wrong {
     background-color: #EC5D49;
+}
+.keyboard > button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5
 }
 button.new-game {
     background-color: #11B5E5;
